Fixing Navigation Drawer sizing on mobile

--- a/styles/less/main.less
+++ b/styles/less/main.less
@@ -273,15 +273,16 @@ nav {           // Mobile Slide out Navigation Drawer
             border: none;
             color: @text-black;
             background-color: white;
-            box-shadow: 500px 0px 0px 0px rgba(0,0,0,0.5);
+            box-shadow: 200px 0px 0px 0px rgba(0,0,0,0.5);
             font-weight: 400;
             height: 100vh!important;
             left: 0;
             max-height: 100vh;
+            margin: 0;
             padding: 0;
             position: absolute;
-            top: 4.11rem;
-            width: 27.77rem;
+            top: 4.02rem;
+            width: 80%;
 
             .navbar-nav {
                 margin: 0.4rem 0;
@@ -301,7 +302,7 @@ nav {           // Mobile Slide out Navigation Drawer
                     margin-top: 25px;
                 }
                 h2 {
-                    font-size: 1.2rem;
+                    font-size: 1rem;
                     font-weight: 400;
                     margin: 0;
                 }
@@ -311,13 +312,13 @@ nav {           // Mobile Slide out Navigation Drawer
             }
             ul li a {
                 color: @text-black;
-                font-size: 1.65rem;
+                font-size: 1.15rem;
                 text-transform: none;
 
                 i {
                     color: @text-grey;
-                    padding-left: 1.1rem;
-                    padding-right: 3.35rem;
+                    padding-left: 0.65rem;
+                    padding-right: 2.35rem;
                 }
 
                 &:hover {
